--- a/content/pages/rules/data/184/index.adoc
+++ b/content/pages/rules/data/184/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/184/
 :category: data
-:description: This document details the security guidelines and requirements related to the importance of obfuscating all those data that contain sensitive or relevant information for the business model within the organization, when the application is not the main focus.
-:keywords: Requirement, Security, Data, Focus, Obfuscate, Application
+:description: This requirement establishes the importance of obfuscating all sensitive data when the application is not the main focus.
+:keywords: Requirement, Security, Data, Focus, Obfuscate, Application, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R184. Obfuscate application data
