--- a/content/pages/rules/source/168/index.adoc
+++ b/content/pages/rules/source/168/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/168/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of explicitly defining and initializing all the variables used in the source code.
-:keywords: Security, Requirement, Source Code, Variables, Initialization, Best Practices.
+:description: This requirement establishes the importance of explicitly defining and initializing all the variables used in the source code.
+:keywords: Security, Requirement, Source Code, Variables, Initialization, Best Practices, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R168. Initialize variables explicitly
