--- a/content/pages/rules/data/177/index.adoc
+++ b/content/pages/rules/data/177/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/177/
 :category: data
-:description: This document contains the details of the security requirements related to the definition and management of sensitive information in the organization. This requirement establishes the importance of storing sensitive data securely, avoiding temporary files and cache memory.
-:keywords: Data, Storage, Cache, ASVS, CWE, GDPR
+:description: This requirement establishes the importance of storing sensitive data securely, avoiding temporary files, and cache memory.
+:keywords: Data, Storage, Cache, ASVS, CWE, GDPR, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R177. Avoid caching and temporary files
