--- a/content/pages/rules/out-of-scope/data/191/index.adoc
+++ b/content/pages/rules/out-of-scope/data/191/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/191/
 :category: data
-:description: This document contains the details of the security requirements related to the definition and management of sensitive data in the organization. This requirement establishes the importance of protecting sensitive data with the maximum security level defined in the system.
-:keywords: Requirement, Security, System, Protection, Personal Data, User
+:description: This requirement establishes the importance of protecting sensitive data with the maximum security level defined in the system.
+:keywords: Requirement, Security, System, Protection, Personal Data, User, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
