--- a/content/pages/rules/out-of-scope/foreign/198/index.adoc
+++ b/content/pages/rules/out-of-scope/foreign/198/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/198/
 :category: foreign
-:description: This document contains the details of the security requirements related to the definition and management of foreign devices in the organization. This requirement establishes the importance of defining what kind of people are allowed to use foreign devices in the facilities.
-:keywords: Requirement, Security, Foreign, Devices, People, Authorization
+:description: This requirement establishes the importance of defining what kind of people are allowed to use foreign devices in the facilities.
+:keywords: Requirement, Security, Foreign, Devices, People, Authorization, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
@@ -10,7 +10,7 @@
 == Requirement
 
 The organization must determine
-what kind of people (workforce members, visitors, etc)
+what kind of people (workforce members, visitors, etc.)
 are allowed to use foreign devices.
 
 == References
