--- a/content/pages/rules/source/164/index.adoc
+++ b/content/pages/rules/source/164/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/164/
 :category: source
-:description: This document details the security guidelines and requirements related to the source code that composes the applications of the company or the organization. This requirement establishes the importance of using optimized data containers or structures.
-:keywords: Source Code, Structures, Containers, Optimization, ASVS, CWE
+:description: This requirement establishes the importance of using optimized data containers or structures.
+:keywords: Source Code, Structures, Containers, Optimization, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R164. Use optimized structures
