--- a/content/pages/rules/source/171/index.adoc
+++ b/content/pages/rules/source/171/index.adoc
@@ -1,15 +1,15 @@
 :slug: rules/171/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of removing commented-out code before deploying source code to the production environment.
-:keywords: Commented-out, Code, Source, Production, Environment, CWE
+:description: This requirement establishes the importance of removing the commented-out code before deploying source code to the production environment.
+:keywords: Commented-out, Code, Source, Production, Environment, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R171. Remove commented-out code
 
 == Requirement
 
-The source code must not contain commented-out code when it is deployed to the
-production environment.
+The source code must not contain commented-out code
+when it is deployed to the production environment.
 
 == Findings
 
