--- a/content/pages/rules/source/172/index.adoc
+++ b/content/pages/rules/source/172/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/172/
 :category: source
-:description: This document details the security guidelines and requirements related to the secure encryption of database connection strings. Such encryption must be performed in configuration files, which must be separated from the source code that composes the application.
-:keywords: Source Code, Databases, Connection, Encryption, ASVS, CWE
+:description: This requirement establishes that the secure encryption of database connection strings must be performed in configuration files separate from the source code.
+:keywords: Source Code, Databases, Connection, Encryption, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R172. Encrypt connection strings
