--- a/content/pages/rules/source/175/index.adoc
+++ b/content/pages/rules/source/175/index.adoc
@@ -1,14 +1,14 @@
 :slug: rules/175/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of protecting pages against clickjacking attacks by defining the respective security measures in the source code.
-:keywords: Requirement, Security, Web, Clickjacking, Source Code, Protection
+:description: This requirement establishes the importance of protecting pages against clickjacking attacks by defining the respective security measures in the source code.
+:keywords: Requirement, Security, Web, Clickjacking, Source Code, Protection, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R175. Protect pages from clickjacking
 
 == Requirement
 
-Web pages must be protected from being embebed
+Web pages must be protected from being embedded
 in malicious sites (*clickjacking*).
 
 == Findings
