feat(doc): #2994.196 add asvs refs to some rules
- Added ASVS references to R075, R083,
- Updated old ASVS references in R074, R075 and R083
- Adjusted R144 for clarity


Former-commit-id: 3b98ca5c6dee4ebe5d035a7835f7ecfd52077fb0

--- a/content/pages/rules/credentials/144/index.adoc
+++ b/content/pages/rules/credentials/144/index.adoc
@@ -4,11 +4,11 @@
 :keywords: Requirement, Security, Credentials, User, Account, Purge, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R144. Purge accounts periodically
+= R144. Remove inactive accounts periodically
 
 == Requirement
 
-The organization must purge user accounts periodically.
+The organization must remove inactive user accounts periodically (purging).
 
 == Findings
 
