--- a/content/pages/rules/authentication/225/index.adoc
+++ b/content/pages/rules/authentication/225/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/225/
 :category: authentication
-:description: This document details the security requirements and guidelines related to the authentication process performed in the applications. This requirement establishes the importance of configuring the responses to authentication failures in a secure manner.
-:keywords: Requirement, Security, Authentication, Failure, Response, Information
+:description: This requirement establishes the importance of securely configuring the system responses to authentication failures.
+:keywords: Requirement, Security, Authentication, Failure, Response, Information, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R225. Proper authentication responses
