--- a/content/pages/rules/cryptography/223/index.adoc
+++ b/content/pages/rules/cryptography/223/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/223/
 :category: cryptography
 :description: This requirement establishes the importance of generating random numbers using a uniform distribution.
-:keywords: Random, Numbers, Distribution, CWE, NIST, ASVS
+:keywords: Random, Numbers, Distribution, CWE, NIST, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R223. Uniform distribution in random numbers
