--- a/content/pages/rules/mobile/205/index.adoc
+++ b/content/pages/rules/mobile/205/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/205/
 :category: mobile
-:description: This document details the security requirements related to the management of devices that make use of the mobile cellular network. In this requirement it is recommended that these devices have a personal identification number or PIN configured on the SIM Card.
-:keywords: Device, Cellular network, Requirement, PIN, SIM Card, Security
+:description: This requirement establishes that devices must have a personal identification number or PIN configured on the SIM card.
+:keywords: Device, Cellular Network, Requirement, PIN, SIM Card, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R205. Configure PIN
