--- a/content/pages/rules/mobile/206/index.adoc
+++ b/content/pages/rules/mobile/206/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/206/
 :category: mobile
-:description: This document details the security requirements related to the management of communication protocols used by mobile devices in data transfer. This requirement recommends that communication protocols remain hidden, configured with credentials or turned off.
-:keywords: Mobile Device, Protocol, Exchange, Data, Bluetooth, NFC
+:description: This requirement establishes that communication protocols must remain hidden, configured with credentials, or turned off.
+:keywords: Mobile Device, Protocol, Exchange, Data, Bluetooth, NFC, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R206. Configure communication protocols
