--- a/content/pages/rules/out-of-scope/foreign/200/index.adoc
+++ b/content/pages/rules/out-of-scope/foreign/200/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/200/
 :category: foreign
-:description: This document contains the details of the security requirements related to the definition and management of foreign devices in the organization. This requirement establishes the importance of controlling and keeping a record of the entrance and departure of foreign devices in the facilities.
-:keywords: Requirement, Security, Foreign, Devices, Record, Control
+:description: This requirement establishes the importance of controlling and keeping a record of the entrance and departure of foreign devices in the facilities.
+:keywords: Requirement, Security, Foreign, Devices, Record, Control, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
