--- a/content/pages/rules/out-of-scope/hypervisor/219/index.adoc
+++ b/content/pages/rules/out-of-scope/hypervisor/219/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/219/
 :category: hypervisor
-:description: This document contains the details of the security requirements related to the definition and management of hypervisors and virtual machines. This requirement establishes the importance of managing hypervisors and virtual environments through software management tools.
-:keywords: Software, Security, Hypervisor, Machine, Virtualization, Management
+:description: This requirement establishes the importance of managing hypervisors and virtual environments through software management tools.
+:keywords: Software, Security, Hypervisor, Machine, Virtualization, Management, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
