--- a/content/pages/rules/out-of-scope/mobile/207/index.adoc
+++ b/content/pages/rules/out-of-scope/mobile/207/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/207/
 :category: mobile
-:description: This document details security guidelines or requirements, for companies and organizations, related to mobile devices. This requirement states that on portable and mobile devices, belonging to the organization, the system must allow encryption of disks and partitions.
-:keywords: Mobile Device, System, Encryption, Disks, Partitions, Requirement
+:description: This requirement establishes that on portable and mobile devices belonging to the organization, the system must allow encryption of disks and partitions.
+:keywords: Mobile Device, System, Encryption, Disks, Partitions, Requirement, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
