--- a/content/pages/rules/out-of-scope/physical/201/index.adoc
+++ b/content/pages/rules/out-of-scope/physical/201/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/201/
 :category: physical
-:description: This document contains the details of the security requirements related to the definition and management of physical devices in the organization. This requirement establishes the importance of defining mechanisms to detect tampering or unauthorized accesses to physical devices.
-:keywords: Requirement, Security, Mobile, Devices, Tampering, Data
+:description: This requirement establishes the importance of defining mechanisms to detect tampering or unauthorized access to physical devices.
+:keywords: Requirement, Security, Mobile, Devices, Tampering, Data, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
