--- a/content/pages/rules/out-of-scope/physical/203/index.adoc
+++ b/content/pages/rules/out-of-scope/physical/203/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/203/
 :category: physical
-:description: This document details the security requirements related to the proper management of the organization's physical devices. In this requirement it is recommended that every device be capable of preventing a third party from observing the information entered.
-:keywords: Device, Entry, Information, Confidential, Observing, Security
+:description: This requirement establishes that every device must prevent third parties from observing the information entered.
+:keywords: Device, Entry, Information, Confidential, Observing, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
@@ -9,5 +9,5 @@
 
 == Requirement
 
-The device must impede that the entry of information be observed by a third
-party (cover).
+The device must impede that the entry of information
+be observed by a third party (cover).
