--- a/content/pages/rules/out-of-scope/physical/204/index.adoc
+++ b/content/pages/rules/out-of-scope/physical/204/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/204/
 :category: physical
-:description: This document details the security guidelines and requirements related to the proper management of the organization's or company's physical devices. In this requirement it is recommended that any screen presented to the user only allows perpendicular viewing.
-:keywords: Device, Screen, User, Viewing, Perpendicular, Security
+:description: This requirement establishes that any screen presented to the user must only allow perpendicular viewing.
+:keywords: Device, Screen, User, Viewing, Perpendicular, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
