--- a/content/pages/rules/virtualization/221/index.adoc
+++ b/content/pages/rules/virtualization/221/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/221/
 :category: virtualization
-:description: This document details the security guidelines and requirements related to the proper management of a virtual machine configuration. In this case, it is recommended that the machine does not have any connected input devices that are not going to be used.
-:keywords: Virtual Machine, Input, Devices, USB, CD/DVD, IDE
+:description: This requirement states that a virtual machine must not have connected input devices that are not going to be used.
+:keywords: Virtual Machine, Input, Devices, USB, CD/DVD, IDE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R221. Disconnect unnecessary input devices
