--- a/content/pages/rules/virtualization/222/index.adoc
+++ b/content/pages/rules/virtualization/222/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/222/
 :category: virtualization
-:description: This document details the security guidelines and requirements related to the proper management of a virtual machine configuration. In this case, it is recommended that the organization does not allow a virtual machine to access any resources of the host machine.
-:keywords: Virtual Machine, Information, Host, Requirement, Security, Access
+:description: This requirement states that the organization must not allow a virtual machine to access any resources of the host machine.
+:keywords: Virtual Machine, Information, Host, Requirement, Security, Access, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R222. Deny access to the host machine
