feat(doc): #2994.196 add asvs refs to some rules
- Added ASVS references to R075, R083 and R085
- Adjusted a SEO description for length compliance
- Fixed some minor typos


Former-commit-id: 893808ec71002b1248b86740634a63cde50fea14

--- a/content/pages/rules/authentication/229/index.adoc
+++ b/content/pages/rules/authentication/229/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/229/
 :category: authentication
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of requesting access credentials in order to validate the authentication process.
+:description: This requirement establishes the importance of requesting access credentials in order to validate the authentication process.
 :keywords: Authentication, Credentials, HIPAA, ASVS, NIST, CWE
 :rules: yes
 
@@ -9,7 +9,7 @@
 == Requirement
 
 The system must request at least one username and password
-to every actor that tries to authenticate.
+from every actor that tries to authenticate.
 
 == Description
 
