feat(doc): #2994.197 add refs to some rules
- Added CWE references to R080
- Updated old ASVS references in R079 and R080
- Updated R261, R080 and R085 keywords
- Adjusted some SEO descriptions for length compliance
- Fixed some minor typos


Former-commit-id: a7251846bf3bf331f2f3a9a78f176fbab3483bc7

--- a/content/pages/rules/social/261/index.adoc
+++ b/content/pages/rules/social/261/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/261/
 :category: social
-:description: This document details the security requirements related to the proper use of social networks by the staff of a given organization or company. In this case, it is recommended that corporate information not be exposed on publicly accessible web pages and application sections.
-:keywords: Corporate, Personal, Security, Sensitive, CWE, GDPR
+:description: This requirement establishes the importance of not exposing corporate information on publicly accessible web pages and application sections.
+:keywords: Corporate, Personal, Security, Sensitive, CWE, GDPR, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R261. Avoid exposing sensitive information
@@ -26,7 +26,7 @@ social network accounts either.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor].
 The product exposes sensitive information to an actor that is not explicitly
 authorized to have access to that information.
 
