--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -333,3 +333,8 @@ V5.5 Deserialization Prevention Requirements.(5.5.2)]
 Verify that the application correctly restricts *XML* parsers to only use the
 most restrictive configuration possible and to ensure that unsafe features such
 as resolving external entities are disabled to prevent *XXE*.
+
+. [[r40]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V7.3 Log Protection Requirements.(7.3.1)]
+Verify that the application appropriately encodes user-supplied data to prevent
+log injection.
